# deduplication-detecting

./: Makefile.am  Makefile.in  README  configure  configure.ac  configure.scan  makefile.bk
conf/: Makefile.am  Makefile.in  dup.server.conf
data/: Makefile.am  Makefile.in  index_table.dup
demo/: my_client.c
doc/: Doxyfile  deduplication-help.h
install/: deduplication-1.0-1.spec
java/: HammingDist.java
src/: Makefile.am  Makefile.in  batch.c  batch.h  client.c  client.h  clientm.c  clientm.h  common.h  conf.c  conf.h  data.h  define.h  dup.c  dup.h  dupd  hashmap.c  hashmap.h  lookup3.c  lookup3.h  main.c  makefile.bk  redirect.h  runtime.h  scheduler.c  scheduler.h  server.c  server.h  serverm.c  serverm.h  shash.c  simi.c  simi.h  simiw.c  simiw.h  split.c  split.h  test.c  util.c  util.h
